--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.8",
     "nodemailer": "^6.9.9",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
